--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.0/dist/mindar-image-three.prod.js"></script>
 
     <style>
-      body { margin: 0; overflow: hidden; }
-      video { width: 0; height: 0; } /* ocultamos el video en HTML */
+      body, html {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+      }
+      body > canvas {
+        width: 100% !important;
+        height: 100% !important;
+      }
+      video {
+        display: none;
+      }
     </style>
   </head>
 
   <body>
     <!-- video oculto que se reproducirá sobre el target -->
-    <video id="video" src="./video.mp4" preload="auto" loop></video>
+    <video id="video" src="./video.mp4" preload="auto" loop muted playsinline></video>
 
     <script>
       document.addEventListener("DOMContentLoaded", () => {
@@ -29,7 +41,7 @@
         // Crear una textura desde el video
         const video = document.getElementById("video");
         const texture = new THREE.VideoTexture(video);
-        const geometry = new THREE.PlaneGeometry(1, 0.6);
+        const geometry = new THREE.PlaneGeometry(1, 1);
         const material = new THREE.MeshBasicMaterial({ map: texture });
         const plane = new THREE.Mesh(geometry, material);
 
