--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       document.addEventListener("DOMContentLoaded", () => {
         const mindarThree = new window.MINDAR.IMAGE.MindARThree({
           container: document.body,
-          imageTargetSrc: "./targets.mind"
+          imageTargetSrc: "./target_scale1.mind"
         });
 
         const { renderer, scene, camera } = mindarThree;
