--- a/index.html
+++ b/index.html
@@ -1,84 +1,75 @@
-
+<!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/AR.js/aframe/build/aframe-ar.js"></script>
+
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background: black;
+      }
+      a-scene {
+        width: 100%;
+        height: 100%;
+      }
+      video {
+        display: none; /* ocultar el tag video */
+      }
+    </style>
   </head>
 
   <body>
     <a-scene
-      mindar-image="imageTargetSrc: https://cdn.glitch.global/03028441-5e45-4ed1-8a13-3628e91c7c39/targets.mind;"
-      color-space="sRGB"
-      renderer="colorManagement: true, physicallyCorrectLights"
+      mindar-image="imageTargetSrc: ./targets.mind; autoStart: true;"
       vr-mode-ui="enabled: false"
+      color-space="sRGB"
       device-orientation-permission-ui="enabled: false"
+      renderer="colorManagement: true, physicallyCorrectLights"
     >
       <a-assets>
         <video
           id="video"
-          preload="auto"
-          response-type="arraybuffer"
+          src="./video.mp4"
           loop
-          crossorigin
-          autoplay
           playsinline
-          webkit-playsinline
-        >
-          <source
-            src="https://cdn.glitch.global/03028441-5e45-4ed1-8a13-3628e91c7c39/video.mp4"
-            type="video/mp4"
-          />
-        </video>
+          muted
+          preload="auto"
+        ></video>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
+      <!-- Solo un target (targetIndex: 0) -->
       <a-entity mindar-image-target="targetIndex: 0">
         <a-video
           src="#video"
+          width="1"
+          height="1"
           position="0 0 0"
-          width="2"
-          height="2"
           rotation="0 0 0"
           material="shader: flat"
-          play-on-click
-        ></a-video>
-      </a-entity>
-      <a-entity mindar-image-target="targetIndex: 1">
-        <a-video
-          src="#video"
-          position="0 0 0"
-          width="2"
-          height="2"
-          rotation="0 0 0"
-          material="shader: flat"
-          play-on-click
         ></a-video>
       </a-entity>
     </a-scene>
 
     <script>
-      AFRAME.registerComponent("play-on-click", {
-        init: function () {
-          this.onClick = this.onClick.bind(this);
-        },
-        play: function () {
-          window.addEventListener("click", this.onClick);
-        },
-        pause: function () {
-          window.removeEventListener("click", this.onClick);
-        },
-        onClick: function (evt) {
-          var videoEl = this.el.getAttribute("material").src;
-          if (!videoEl) {
-            return;
-          }
-          this.el.object3D.visible = true;
-          videoEl.play();
-        },
+      document.addEventListener("DOMContentLoaded", () => {
+        const video = document.querySelector("#video");
+
+        // MindAR A-Frame eventos
+        document.querySelector("[mindar-image-target]").addEventListener("targetFound", () => {
+          video.play();
+        });
+
+        document.querySelector("[mindar-image-target]").addEventListener("targetLost", () => {
+          video.pause();
+        });
       });
     </script>
   </body>
