Update mindar-image attribute for custom tracking

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body>
     <a-scene
-      mindar-image="imageTargetSrc: ./targets.mind; autoStart: true;"
+      mindar-image="imageTargetSrc: ./targets.mind; uiScanning: #ui-custom-tracking-overlay;"
       vr-mode-ui="enabled: false"
       color-space="sRGB"
       device-orientation-permission-ui="enabled: false"
