--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
     </style>
   </head>
-
+<!--
   <body>
     <a-scene
       mindar-image="imageTargetSrc: ./targets.mind; uiScanning: #ui-custom-tracking-overlay;"
@@ -50,7 +50,7 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <!-- Solo un target (targetIndex: 0) -->
+      
       <a-entity mindar-image-target="targetIndex: 0">
         <a-video
           src="#video"
@@ -77,5 +77,5 @@
         });
       });
     </script>
-  </body>
+  </body>-->
 </html>
