--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
     </style>
   </head>
-<!--
+
   <body>
     <a-scene
       mindar-image="imageTargetSrc: ./targets.mind; uiScanning: #ui-custom-tracking-overlay;"
@@ -33,7 +33,7 @@
       color-space="sRGB"
       device-orientation-permission-ui="enabled: false"
       renderer="colorManagement: true, physicallyCorrectLights"
-    >
+    ><!--
       <a-assets>
         <video
           id="video"
@@ -76,6 +76,6 @@
           video.pause();
         });
       });
-    </script>
-  </body>-->
+    </script>-->
+  </body>
 </html>
