--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
           rotation="0 0 0"
           material="shader: flat"
         ></a-video>
-      </a-entity>
+      </a-entity>-->
     </a-scene>
-
+<!--
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const video = document.querySelector("#video");
