--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
 
   <body>
     <a-scene
+      embedded
       mindar-image="imageTargetSrc: ./targets.mind; uiScanning: #ui-custom-tracking-overlay;"
       vr-mode-ui="enabled: false"
       color-space="sRGB"
       device-orientation-permission-ui="enabled: false"
       renderer="colorManagement: true, physicallyCorrectLights"
-    ><!--
+    >
       <a-assets>
         <video
           id="video"
@@ -47,10 +48,9 @@
           webkit-playsinline
         ></video>
       </a-assets>
--->
+
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-   <!--   
       <a-entity mindar-image-target="targetIndex: 0">
         <a-video
           src="#video"
