Uncomment script for video control on DOMContentLoaded

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         ></a-video>
       </a-entity>-->
     </a-scene>
-<!--
+
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const video = document.querySelector("#video");
@@ -76,6 +76,6 @@
           video.pause();
         });
       });
-    </script>-->
+    </script>
   </body>
 </html>
