Update video element dimensions and attributes

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel"
           animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"
         >-->
-		<a-video src="#video" position="0 0 0.1" width="1" height="0.6" rotation="0 0 0"></a-video>
+		<a-video src="#video" position="0 0 0.1" width="2" height="2" rotation="0 0 0" play-on-click></a-video>
       </a-entity>
     </a-scene>
   </body>
