--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<!--<img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" />
 	<a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
      --> <video
-          id="video" src="./video.mp4" preload="auto" response-type="arraybuffer" loop autoplay playsinline muted preload="auto"></video>
+          id="video" src="./video.mp4" preload="auto" response-type="arraybuffer" loop autoplay playsinline preload="auto"></video>
 	  </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
