--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<!--<img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" />
 	<a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
      --> <video
-          id="video" src="./video.mp4" preload="auto" response-type="arraybuffer" loop playsinline preload="auto"></video>
+          id="video" src="./video.mp4" preload="auto" response-type="arraybuffer" loop playsinline preload="auto" material="shader: flat" play-on-click></video>
 	  </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -106,34 +106,24 @@
       </a-entity>
     </a-scene>
 	<script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const video = document.querySelector("#video");
-
-        // Por defecto, el video está en pausa y en silencio
-        video.pause();
-
-        // Cuando el target es encontrado, mostrar el video
-        document.querySelector("[mindar-image-target]").addEventListener("targetFound", () => {
-          console.log("Target encontrado, video mostrado (en pausa)");
-
-          // Ahora esperamos el clic para activar el sonido
-          document.querySelector("a-scene").addEventListener("click", () => {
-            if (video.paused) {
-              video.play().then(() => {
-                video.muted = false; // Desactivar el mute para reproducir con sonido
-                console.log("Video reproduciéndose con sonido");
-              }).catch((err) => {
-                console.log("Error al intentar reproducir el video:", err);
-              });
-            }
-          });
-        });
-
-        // Cuando el target es perdido, pausar el video
-        document.querySelector("[mindar-image-target]").addEventListener("targetLost", () => {
-          console.log("Target perdido, pausar video");
-          video.pause();
-        });
+      AFRAME.registerComponent("play-on-click", {
+        init: function () {
+          this.onClick = this.onClick.bind(this);
+        },
+        play: function () {
+          window.addEventListener("click", this.onClick);
+        },
+        pause: function () {
+          window.removeEventListener("click", this.onClick);
+        },
+        onClick: function (evt) {
+          var videoEl = this.el.getAttribute("material").src;
+          if (!videoEl) {
+            return;
+          }
+          this.el.object3D.visible = true;
+          videoEl.play();
+        },
       });
     </script>	
   </body>
