--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<!--<img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" />
 	<a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
      --> <video
-          id="video" src="./video.mp4" preload="auto" response-type="arraybuffer" loop playsinline preload="auto" material="shader: flat" play-on-click></video>
+          id="video" src="./video.mp4" preload="auto" response-type="arraybuffer" loop playsinline preload="auto"></video>
 	  </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -102,7 +102,7 @@
         <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel"
           animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"
         >-->
-		<a-video src="#video" position="0 0 0.1" width="2" height="2" rotation="0 0 0"></a-video>
+		<a-video src="#video" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
       </a-entity>
     </a-scene>
 	<script>
@@ -112,7 +112,7 @@
         },
         play: function () {
           window.addEventListener("click", this.onClick);
-        },
+        }, 
         pause: function () {
           window.removeEventListener("click", this.onClick);
         },
