--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<!--<img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" />
 	<a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
      --> <video
-          id="video" src="./video.mp4" preload="auto" response-type="arraybuffer" loop playsinline preload="auto"></video>
+          id="video" src="./video.mp4" preload="auto" response-type="arraybuffer" loop playsinline muted preload="auto"></video>
 	  </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -102,29 +102,39 @@
         <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel"
           animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"
         >-->
-		<a-video src="#video" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
+		<a-video src="#video" position="0 0 0.1" width="2" height="2" rotation="0 0 0"></a-video>
       </a-entity>
     </a-scene>
 	<script>
-      AFRAME.registerComponent("play-on-click", {
-        init: function () {
-          this.onClick = this.onClick.bind(this);
-        },
-        play: function () {
-          window.addEventListener("click", this.onClick);
-        }, 
-        pause: function () {
-          window.removeEventListener("click", this.onClick);
-        },
-        onClick: function (evt) {
-          var videoEl = this.el.getAttribute("material").src;
-          if (!videoEl) {
-            return;
-          }
-          this.el.object3D.visible = true;
-          videoEl.play();
-        },
+      document.addEventListener("DOMContentLoaded", () => {
+        const video = document.querySelector("#video");
+
+        // Por defecto, el video está en pausa y en silencio
+        video.pause();
+
+        // Cuando el target es encontrado, mostrar el video
+        document.querySelector("[mindar-image-target]").addEventListener("targetFound", () => {
+          console.log("Target encontrado, video mostrado (en pausa)");
+
+          // Ahora esperamos el clic para activar el sonido
+          document.querySelector("a-scene").addEventListener("click", () => {
+            if (video.paused) {
+              video.play().then(() => {
+                video.muted = false; // Desactivar el mute para reproducir con sonido
+                console.log("Video reproduciéndose con sonido");
+              }).catch((err) => {
+                console.log("Error al intentar reproducir el video:", err);
+              });
+            }
+          });
+        });
+
+        // Cuando el target es perdido, pausar el video
+        document.querySelector("[mindar-image-target]").addEventListener("targetLost", () => {
+          console.log("Target perdido, pausar video");
+          video.pause();
+        });
       });
-    </script>	
+    </script>
   </body>
 </html>
