--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
-		<a-video src="#video" position="0 0 0.1" width="2" height="2" rotation="0 0 0"></a-video>
+		<a-video src="#video" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
       </a-entity>
     </a-scene>
 	<!--<script>
