--- a/index.html
+++ b/index.html
@@ -1,85 +1,4 @@
 <!DOCTYPE html>
-<!--<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-  
-
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        background: black;
-      }
-      a-scene {
-        width: 100%;
-        height: 100%;
-      }
-      video {
-        display: none; /* ocultar el tag video */
-      }
-    </style>
-  </head>
-
-  <body>
-    <a-scene
-      embedded
-      mindar-image="imageTargetSrc: ./targets.mind; uiScanning: #ui-custom-tracking-overlay;"
-      vr-mode-ui="enabled: false"
-      color-space="sRGB"
-      device-orientation-permission-ui="enabled: false"
-      renderer="colorManagement: true, physicallyCorrectLights"
-    >
-      <a-assets>
-        <video
-          id="video"
-          src="./video.mp4"
-          preload="auto"
-          response-type="arraybuffer"
-          loop
-          crossorigin
-          autoplay
-          playsinline
-          webkit-playsinline
-        ></video>
-      </a-assets>
-
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-
-      <a-entity mindar-image-target="targetIndex: 0">
-        <a-video
-          src="#video"
-          width="2"
-          height="2"
-          position="0 0 0"
-          rotation="0 0 0"
-          material="shader: flat"
-        ></a-video>
-      </a-entity>
-    </a-scene>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const video = document.querySelector("#video");
-
-        // MindAR A-Frame eventos
-        document.querySelector("[mindar-image-target]").addEventListener("targetFound", () => {
-          video.play();
-        });
-
-        document.querySelector("[mindar-image-target]").addEventListener("targetLost", () => {
-          video.pause();
-        });
-      });
-    </script>
-  </body>
-</html>-->
-
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -87,9 +6,9 @@
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: ./sackboy.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-		  <video
+		  <!--<video
 	          id="video" 
 			  src="./video.mp4" 
 			  preload="auto" 
@@ -99,14 +18,21 @@
 	          autoplay
 	          playsinline
 	          webkit-playsinline>	  
-		  </video>
+		  </video>-->
+		  <a-asset-item id="avatarModel" src="./sackboy.glb"></a-asset-item>
 	  </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
-		<a-video src="#video" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
-      </a-entity>
+		<!--<a-video src="#video" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
+      	-->
+		  <a-gltf-model 
+          src="#avatarModel"
+          scale="0.1 0.1 0.1"
+          position="0 0 0.1">
+        </a-gltf-model>
+	  </a-entity>
     </a-scene>
 	  <script>
       AFRAME.registerComponent("play-on-click", {
