--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: ./sackboy.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-		  <!--<video
-	          id="video" 
-			  src="./video.mp4" 
+		  <video
+	          id="videoIciar" 
+			  src="./videoIciar.mp4" 
 			  preload="auto" 
 			  response-type="arraybuffer" 
 			  loop
@@ -18,21 +18,36 @@
 	          autoplay
 	          playsinline
 	          webkit-playsinline>	  
-		  </video>-->
+		  </video>
+		  <video
+	          id="videoAmigos" 
+			  src="./videoAmigos.mp4" 
+			  preload="auto" 
+			  response-type="arraybuffer" 
+			  loop
+	          crossorigin
+	          autoplay
+	          playsinline
+	          webkit-playsinline>	  
+		  </video>
 		  <a-asset-item id="avatarModel" src="./sackboy.glb"></a-asset-item>
 	  </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
-		<!--<a-video src="#video" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
-      	-->
-		  <a-gltf-model 
-          src="#avatarModel"
-          scale="1 1 1"
-          position="0 0 0.1">
-        </a-gltf-model>
+		<a-video src="#videoIciar" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>	
 	  </a-entity>
+	  <a-entity mindar-image-target="targetIndex: 1">
+		<a-video src="#videoAmigos" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
+	  </a-entity>
+	  <a-entity mindar-image-target="targetIndex: 2">
+		 <a-gltf-model 
+		  src="#avatarModel"
+		  scale="1 1 1"
+		  position="0 0 0.1">
+		 </a-gltf-model>
+	   </a-entity>
     </a-scene>
 	  <script>
       AFRAME.registerComponent("play-on-click", {
