--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 			  response-type="arraybuffer" 
 			  loop
 	          crossorigin
-	          autoplay
 	          playsinline
 	          webkit-playsinline>	  
 		  </video>
@@ -26,7 +25,6 @@
 			  response-type="arraybuffer" 
 			  loop
 	          crossorigin
-	          autoplay
 	          playsinline
 	          webkit-playsinline>	  
 		  </video>
@@ -36,10 +34,10 @@
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0" control-video-target="video: #videoIciar">
-		<a-video src="#videoIciar" position="0 0 0.1" width="2" height="4" rotation="0 0 0" material="shader: flat" play-on-click></a-video>	
+		<a-video src="#videoIciar" position="0 0 0.1" width="2" height="3" rotation="0 0 0" material="shader: flat"></a-video>	
 	  </a-entity>
 	  <a-entity mindar-image-target="targetIndex: 1" control-video-target="video: #videoAmigos">
-		<a-video src="#videoAmigos" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
+		<a-video src="#videoAmigos" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat"></a-video>
 	  </a-entity>
 	  <a-entity mindar-image-target="targetIndex: 2">
 		 <a-gltf-model 
