--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			  preload="auto" 
 			  response-type="arraybuffer" 
 			  loop
+			  autoplay
 	          crossorigin
 	          playsinline
 	          webkit-playsinline>	  
@@ -24,6 +25,7 @@
 			  preload="auto" 
 			  response-type="arraybuffer" 
 			  loop
+			  autoplay
 	          crossorigin
 	          playsinline
 	          webkit-playsinline>	  
