--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			  preload="auto" 
 			  response-type="arraybuffer" 
 			  loop
+			  autoplay
 	          crossorigin
 	          playsinline
 	          webkit-playsinline>	  
@@ -24,6 +25,7 @@
 			  preload="auto" 
 			  response-type="arraybuffer" 
 			  loop
+			  autoplay
 	          crossorigin
 	          playsinline
 	          webkit-playsinline>	  
@@ -34,10 +36,10 @@
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0" control-video-target="video: #videoIciar">
-		<a-video src="#videoIciar" position="0 0 0.1" width="2" height="3" rotation="0 0 0" material="shader: flat"></a-video>	
+		<a-video src="#videoIciar" position="0 0 0.1" width="2" height="3" rotation="0 0 0" material="shader: flat" play-on-click></a-video>	
 	  </a-entity>
 	  <a-entity mindar-image-target="targetIndex: 1" control-video-target="video: #videoAmigos">
-		<a-video src="#videoAmigos" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat"></a-video>
+		<a-video src="#videoAmigos" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
 	  </a-entity>
 	  <a-entity mindar-image-target="targetIndex: 2">
 		 <a-gltf-model 
