--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <a-entity mindar-image-target="targetIndex: 0" control-video-target="video: #videoIciar">
+      <a-entity mindar-image-target="targetIndex: 0" pause-on-target-lost="video: #videoIciar">
 		<a-video src="#videoIciar" position="0 0 0.1" width="2" height="3" rotation="0 0 0" material="shader: flat" play-on-click></a-video>	
 	  </a-entity>
-	  <a-entity mindar-image-target="targetIndex: 1" control-video-target="video: #videoAmigos">
+	  <a-entity mindar-image-target="targetIndex: 1" pause-on-target-lost="video: #videoAmigos">
 		<a-video src="#videoAmigos" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
 	  </a-entity>
 	  <a-entity mindar-image-target="targetIndex: 2">
@@ -49,7 +49,7 @@
 		 </a-gltf-model>
 	   </a-entity>
     </a-scene>
-	  <script>
+	 <!--
       // AFRAME.registerComponent("play-on-click", {
       //   init: function () {
       //     this.onClick = this.onClick.bind(this);
@@ -68,29 +68,35 @@
       //     this.el.object3D.visible = true;
       //     videoEl.play();
       //   },
-      // });
-		  AFRAME.registerComponent("control-video-target", {
-        schema: {
-          video: { type: 'selector' }
-        },
+      // });-->
+		<script>
+      AFRAME.registerComponent("play-on-click", {
+        schema: { video: { type: "selector" } },
 
         init: function () {
           const video = this.data.video;
 
-          // Cuando la imagen aparece
-          this.el.addEventListener("targetFound", () => {
-            console.log("Target detectado");
+          window.addEventListener("click", () => {
             video.play();
-          });
-
-          // Cuando la imagen desaparece
-          this.el.addEventListener("targetLost", () => {
-            console.log("Target perdido");
-            video.pause();
-            video.currentTime = 0; // Reiniciar (opcional)
           });
         }
       });
     </script>
+
+    <!-- COMPONENTE: PAUSAR VIDEO AL PERDER EL TARGET -->
+    <script>
+      AFRAME.registerComponent("pause-on-target-lost", {
+        schema: { video: { type: "selector" } },
+
+        init: function () {
+          const video = this.data.video;
+
+          this.el.addEventListener("targetLost", () => {
+            video.pause();
+          });
+        }
+      });
+    </script>
+    
   </body>
 </html>
