--- a/index.html
+++ b/index.html
@@ -49,7 +49,34 @@
 		 </a-gltf-model>
 	   </a-entity>
     </a-scene>
-	 	<script>
+	  <script>
+  AFRAME.registerComponent("play-on-click", {
+    schema: { video: { type: "selector" } },
+
+    init: function () {
+      const video = this.data.video;
+      this.targetVisible = false;
+
+      // Detectar si el target está visible
+      this.el.parentEl.addEventListener("targetFound", () => {
+        this.targetVisible = true;
+      });
+
+      this.el.parentEl.addEventListener("targetLost", () => {
+        this.targetVisible = false;
+      });
+
+      // Reproducir solo si el target está visible
+      window.addEventListener("click", () => {
+        if (this.targetVisible) {
+          video.play();
+        }
+      });
+    }
+  });
+</script>
+
+	 	<!--<script>
        AFRAME.registerComponent("play-on-click", {
          init: function () {
            this.onClick = this.onClick.bind(this);
@@ -70,7 +97,7 @@
          },
        });
 	
-    </script>
+    </script>-->
 
     <!-- COMPONENTE: PAUSAR VIDEO AL PERDER EL TARGET -->
     <script>
