--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <a-entity mindar-image-target="targetIndex: 0" pause-on-target-lost="video: #videoIciar">
+      <a-entity mindar-image-target="targetIndex: 0">
 		<a-video src="#videoIciar" position="0 0 0.1" width="2" height="3" rotation="0 0 0" material="shader: flat" play-on-click></a-video>	
 	  </a-entity>
-	  <a-entity mindar-image-target="targetIndex: 1" pause-on-target-lost="video: #videoAmigos">
+	  <a-entity mindar-image-target="targetIndex: 1">
 		<a-video src="#videoAmigos" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
 	  </a-entity>
 	  <a-entity mindar-image-target="targetIndex: 2">
