Comment out videoAmigos video and entity
Comment out video elements and associated entity.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	          playsinline
 	          webkit-playsinline>	  
 		  </video>
-		  <video
+		 <!-- <video
 	          id="videoAmigos" 
 			  src="./videoAmigos.mp4" 
 			  preload="auto" 
@@ -29,7 +29,7 @@
 	          crossorigin
 	          playsinline
 	          webkit-playsinline>	  
-		  </video>
+		  </video>-->
 		  <a-asset-item id="avatarModel" src="./sackboy.glb"></a-asset-item>
 	  </a-assets>
 
@@ -38,9 +38,9 @@
       <a-entity mindar-image-target="targetIndex: 0">
 		<a-video src="#videoIciar" position="0 0 0.1" width="2" height="3" rotation="0 0 0" material="shader: flat" play-on-click></a-video>	
 	  </a-entity>
-	  <a-entity mindar-image-target="targetIndex: 1">
+	  <!--<a-entity mindar-image-target="targetIndex: 1">
 		<a-video src="#videoAmigos" position="0 0 0.1" width="2" height="2" rotation="0 0 0" material="shader: flat" play-on-click></a-video>
-	  </a-entity>
+	  </a-entity>-->
 	  <a-entity mindar-image-target="targetIndex: 2">
 		 <a-gltf-model 
 		  src="#avatarModel"
