--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <a-entity mindar-image-target="targetIndex: 0">
+      <a-entity mindar-image-target="targetIndex: 0" pause-on-lost>
 		<a-video src="#videoIciar" position="0 0 0.1" width="2" height="3" rotation="0 0 0" material="shader: flat" play-on-click></a-video>	
 	  </a-entity>
 	  <!--<a-entity mindar-image-target="targetIndex: 1">
@@ -68,6 +68,20 @@
            this.el.object3D.visible = true;
            videoEl.play();
          },
+       });
+
+		AFRAME.registerComponent("pause-on-lost", {
+         init: function () {
+           this.el.addEventListener('targetLost', () => {
+             const video = this.el.querySelector('a-video');
+             if (video) {
+               const videoEl = video.getAttribute('material').src;
+               videoEl.pause();
+               // Opcional: ocultar el video cuando se pierde el target
+               video.object3D.visible = false;
+             }
+           });
+         }
        });
 	
     </script>
